--- a/app/views/pages/dashboard/_cashflow_sankey.html.erb
+++ b/app/views/pages/dashboard/_cashflow_sankey.html.erb
@@ -18,6 +18,19 @@
         data-sankey-chart-currency-symbol-value="<%= sankey_data[:currency_symbol] %>"
         class="w-full h-full"></div>
     </div>
+
+    <%= render DS::Dialog.new(id: "cashflow-expanded-dialog", auto_open: false, width: "full", disable_frame: true) do |dialog| %>
+      <% dialog.with_header(title: "Cashflow", hide_close_icon: false) %>
+      <% dialog.with_body do %>
+        <div class="w-full" style="height: 85vh; min-height: 45rem;">
+          <div
+            data-controller="sankey-chart"
+            data-sankey-chart-data-value="<%= sankey_data.to_json %>"
+            data-sankey-chart-currency-symbol-value="<%= sankey_data[:currency_symbol] %>"
+            class="w-full h-full"></div>
+        </div>
+      <% end %>
+    <% end %>
   <% else %>
     <div class="h-[300px] lg:h-[340px] bg-container py-4 flex flex-col items-center justify-center">
       <div class="space-y-3 text-center flex flex-col items-center">
