--- a/app/views/layouts/shared/_htmldoc.html.erb
+++ b/app/views/layouts/shared/_htmldoc.html.erb
@@ -21,7 +21,9 @@
     <div class="fixed z-50 top-6 md:top-4 left-1/2 -translate-x-1/2 w-full md:w-80 px-4 md:px-0 mx-auto md:mx-0 md:right-auto pt-[env(safe-area-inset-top)]">
       <div id="notification-tray" class="space-y-1 w-full">
         <%= render_flash_notifications %>
+      </div>
 
+      <div id="cta">
         <%= render_flash_cta %>
       </div>
     </div>
