--- a/app/views/shared/notifications/_cta.html.erb
+++ b/app/views/shared/notifications/_cta.html.erb
@@ -1,12 +1,13 @@
 <%# locals: (message:, description:) %>
 
-<%= tag.div id: "cta", class: "relative flex gap-3 rounded-lg bg-container p-4 group w-full md:max-w-80 shadow-border-lg mb-3 transition-enter-exit animate-fade-up-initial",
-            data: {
-              controller: "element-removal",
-              element_removal_initial_class: "animate-fade-up-initial",
-              element_removal_visible_class: "animate-fade-up-visible",
-              element_removal_exit_class: "animate-fade-up-exit"
-            } do %>
+<div id="cta">
+  <%= tag.div class: "relative flex gap-3 rounded-lg bg-container p-4 group w-full md:max-w-80 shadow-border-lg transition-enter-exit animate-fade-up-initial",
+              data: {
+                controller: "element-removal",
+                element_removal_initial_class: "animate-fade-up-initial",
+                element_removal_visible_class: "animate-fade-up-visible",
+                element_removal_exit_class: "animate-fade-up-exit"
+              } do %>
     <div class="h-5 w-5 shrink-0 p-px text-primary">
       <div class="flex h-full items-center justify-center rounded-full bg-success fg-inverse">
         <%= icon "check", size: "xs", color: "current" %>
@@ -25,4 +26,5 @@
   <div class="absolute -top-2 -right-2">
     <%= icon "x", class: "p-0.5 hidden group-hover:inline-block border border-alpha-black-50 border-solid rounded-lg bg-container text-subdued cursor-pointer", data: { action: "click->element-removal#remove" } %>
   </div>
-<% end %>
+  <% end %>
+</div>
