--- a/app/views/recurring_transactions/_projected_transaction.html.erb
+++ b/app/views/recurring_transactions/_projected_transaction.html.erb
@@ -1,6 +1,6 @@
 <%# locals: (recurring_transaction:) %>
 
-<div class="grid grid-cols-12 items-center text-subdued text-sm font-medium p-4 lg:p-4 bg-container-inset rounded">
+<div class="group flex lg:grid lg:grid-cols-12 items-center text-primary text-sm font-medium p-3 lg:p-4">
   <div class="pr-4 lg:pr-10 flex items-center gap-3 lg:gap-4 col-span-8">
     <div class="max-w-full">
       <%= content_tag :div, class: ["flex items-center gap-2"] do %>
@@ -34,14 +34,14 @@
               </div>
 
               <div class="flex items-center gap-1 flex-shrink-0">
-                <span class="inline-flex items-center px-2 py-0.5 rounded text-xs font-medium bg-blue-tint-10 text-link">
+                <span class="inline-flex items-center px-2 py-0.5 rounded-full text-xs font-medium bg-blue-tint-10 text-link">
                   <%= t("recurring_transactions.projected") %>
                 </span>
               </div>
             </div>
 
             <div class="text-secondary text-xs font-normal">
-              <%= t("recurring_transactions.expected_on", date: l(recurring_transaction.next_expected_date, format: :short)) %>
+              <%= t("recurring_transactions.expected_in", days: (recurring_transaction.next_expected_date - Date.today).to_i) %>
             </div>
           </div>
         </div>
